objects/Recommendation__c.object
<CustomObject>
    <description>User generated recommendations for a member.</description>
    <fields>
        <fullName>Member__c</fullName>
        <description>The member being recommended.</description>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recommendation_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The member submitting the recommendation.</description>
        <label>Recommendation From</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Recommendations Given</relationshipLabel>
        <relationshipName>Recommendations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <description>The actual text of the recommendation.</description>
        <label>Recommendation</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SQL_Id__c</fullName>
        <externalId>true</externalId>
        <label>SQL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Recommendation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>